[sc-8276] improve kb creation and settings (#1260)
* Improve KB creation dialog

  - Better consistency and spacing in form layout on the first creation step
  - Keep only language selection and anonymization toggle on 2nd step
  - Fix translation of account kb count

* Improve KB settings page

  - Better form management in KB settings
  - Display only basic configuration by default
  - Display advanced configuration on demand (toggle)
  - Fix Sluggable validator

* Rebase & clean up

* Fix prod builds

--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -48,6 +48,12 @@
 	"account.full_name": "Prénom et nom de famille",
 	"account.generate_key": "Générer une nouvelle clé",
 	"account.invited_user": "Nous avons envoyé un e-mail d'invitation à {{user}} pour qu'il s'inscrive sur ce compte.",
+	"account.kb.add": "Ajouter une Knowledge Box",
+	"account.kb.count": "{{count}} sur {{max}}",
+	"account.kb.edit": "Modifier les préférences",
+	"account.kb.publish": "Publier",
+	"account.kb.retire": "Dépublier",
+	"account.kb.users": "Gestion des utilisateurs",
 	"account.kb-description": "Une boîte à connaissances est un ensemble de contenus sur lesquels Nuclia effectue des recherches. Certains moteurs de recherche l'appellent \"index\" ou \"corpus\".  Dans la plupart des cas, vous n'avez besoin que d'une seule boîte de connaissances pour votre application.",
 	"account.knowledgeboxes": "Knowledge Boxes",
 	"account.licence": "Licence",
@@ -72,14 +78,6 @@
 	"account.replace_config": "Remplacer les paramètres",
 	"account.speech_to_text": "De la parole au texte",
 	"account.speech_to_text_description": "Nuclia propose des modèles de synthèse vocale améliorés. L'utilisation de ces modèles nécessite plus de calculs et un coût supplémentaire associé. Cochez la case suivante si vous souhaitez utiliser les modèles améliorés.",
-	"account.stash.add": "Ajouter une Knowledge Box",
-	"account.stash.delete": "Supprimer",
-	"account.stash.edit": "Modifier les préférences",
-	"account.stash.publish": "Publier",
-	"account.stash.refresh_counters": "Actualiser les compteurs",
-	"account.stash.retire": "Dépublier",
-	"account.stash.upgrade": "Augmenter le maximum de KB",
-	"account.stash.users": "Gestion des utilisateurs",
 	"account.threshold": "Seuil de consommation",
 	"account.title": "Nom",
 	"account.token_description": "<strong> Important !</strong> Copiez et enregistrez la clé API. Il disparaîtra une fois ajouté.",
@@ -456,6 +454,61 @@
 	"getting-started.upload.link-textarea.help": "Une URL par ligne",
 	"getting-started.upload.link-textarea.label": "Tapez ou collez les URLs des pages Web",
 	"getting-started.upload.title": "1. Télécharger des données",
+	"kb.create.error": "Une erreur s'est produite lors de la création de la Knowledge Box. Veuillez réessayer.",
+	"kb.create.failure": "Quelque chose ne va pas en ce moment. Contactez votre administrateur.",
+	"kb.create.in_progress": "Création de la Knowledge Box en cours…",
+	"kb.create.invalid_name": "Nom de la Knowledge Box invalide",
+	"kb.create.title": "Créer une Knowledge Box",
+	"kb.invalid-slug": "Knowledge Box slug invalide",
+	"kb.name": "Nom de la Knowledge Box",
+	"kb.settings.anonymization_toggle.help": "Appliquer l'anonymisation conforme au Règlement général sur la protection des données (RGPD) à toutes les nouvelles ressources de la Knowledge Box",
+	"kb.settings.anonymization_toggle.label": "Anonymisation",
+	"kb.settings.confirm-anonymization.confirm-button": "Anonymiser",
+	"kb.settings.confirm-anonymization.description": "Une fois les ressources anonymisées, cela ne peut plus être annulé. <br>Remarque : les nouveaux paramètres d'anonymisation n'affecteront pas les ressources existantes",
+	"kb.settings.confirm-anonymization.title": "Attention : les ressources futures seront affectées",
+	"kb.settings.generative_model.help": "Indiquez le modèle utilisé pour générer des réponses aux questions des utilisateurs.",
+	"kb.settings.generative_model.label": "Génération de réponses",
+	"kb.settings.generative_model.options.anthropic": "Anthropic Claude",
+	"kb.settings.generative_model.options.chatgpt": "OpenAI ChatGPT-3.5",
+	"kb.settings.generative_model.options.chatgpt-azure": "OpenAI + Azure ChatGPT-4",
+	"kb.settings.generative_model.options.chatgpt-azure-3": "OpenAI + Azure ChatGPT-3.5",
+	"kb.settings.generative_model.options.cohere": "Cohere Command (beta)",
+	"kb.settings.generative_model.options.disabled": "Désactivé",
+	"kb.settings.generative_model.options.enabled": "Activé",
+	"kb.settings.generative_model.options.gemini-pro": "Google Gemini Pro",
+	"kb.settings.generative_model.options.generative-multilingual-2023": "Mode sans génération",
+	"kb.settings.generative_model.options.multilingual-2023-08-16": "multilingual (alpha)",
+	"kb.settings.generative_model.options.nuclia-atlas-v1": "Nuclia Atlas",
+	"kb.settings.generative_model.options.nuclia-etna-v1": "Nuclia Etna",
+	"kb.settings.generative_model.options.nuclia-everest-v1": "Nuclia Everest",
+	"kb.settings.generative_model.options.palm": "Google PaLM 2 (beta)",
+	"kb.settings.generative_model.options.summary-extended": "Résumé détaillé mettant en avant les sujets marquants et les termes importants",
+	"kb.settings.generative_model.options.summary-simple": "Résumé standard de quelques lignes",
+	"kb.settings.generative_model.system_prompt_label": "Comportement",
+	"kb.settings.models-section.advanced": "Avancé",
+	"kb.settings.models-section.title": "Modèles et prompts",
+	"kb.settings.pdf_annotation_toggle.help": "Permet de sélectionner visuellement certaines parties de la mise en page du document et de les annoter.",
+	"kb.settings.pdf_annotation_toggle.label": "Annoter par sélection",
+	"kb.settings.semantic.help": "Le modèle sémantique dépend des langues que vous avez sélectionnées lors de la création de cette Knowledge Box",
+	"kb.settings.semantic.label": "Modèle sémantique",
+	"kb.settings.status.label": "Knowledge Box statut: <strong>{{state}}</strong>",
+	"kb.settings.status.private": "privée",
+	"kb.settings.status.published": "publique",
+	"kb.settings.summary.help": "Spécifie le type de résumé à la demande à générer",
+	"kb.settings.summary.label": "Type de résumé à la demande",
+	"kb.settings.summary_model.help": "Indique le modèle utilisé par la fonctionnalité de résumé à la demande",
+	"kb.settings.summary_model.label": "Résumé à la demande",
+	"kb.settings.summary_prompt.examples": "Exemples",
+	"kb.settings.summary_prompt.prompt": "Invite de résumé personnalisée",
+	"kb.settings.summary_prompt.prompt_help": "Définit une invite personnalisée qui sera utilisée à la place de l'invite par défaut lors de la génération d'un résumé.",
+	"kb.settings.toasts.failure": "Une erreur s'est produite lors de l'enregistrement des paramètres.",
+	"kb.settings.toasts.success": "Les nouveaux paramètres ont été enregistrés avec succès.",
+	"kb.settings.use_own_key.label": "Utilisez votre propre clé pour le modèle sélectionné",
+	"kb.settings.user_prompts.examples": "Exemples",
+	"kb.settings.user_prompts.prompt": "Prompt",
+	"kb.settings.user_prompts.prompt_help": "Définit la manière dont nous voulons que le système agisse lorsque nous posons une question. Il est possible de définir des règles plus spécifiques, qui peuvent même remplacer le comportement défini. Par exemple, nous pourrions avoir une invite qui oblige le système à ne donner que des résultats sous forme de listes, ou même à demander de répondre dans une langue donnée.",
+	"kb.settings.user_prompts.system": "Comportement personnalisé",
+	"kb.settings.user_prompts.system_help": "Définit les traits de personnalité généraux de l'assistant, ou la manière dont il doit se comporter lorsqu'il répond à des questions ou au cours d'une conversation. Par exemple, nous pourrions définir que le système répondra en tant que professionnel de la santé.",
 	"label-set.add": "Ajouter un jeu d'étiquettes",
 	"label-set.add-button": "Ajouter nouveau",
 	"label-set.delete.confirm-description": "La suppression du jeu d'étiquettes supprimera également toutes ses étiquettes. Vous ne pouvez pas annuler cette action. Cela peut également affecter les formations en cours et les suggestions générées.",
@@ -757,58 +810,11 @@
 	"standalone.upload-no-nua-key": "Vous n'êtes pas connecté au serveur <strong>nuclia.cloud</strong> et les nouvelles données ne seront pas traitées.",
 	"stash.add_user": "Ajouter un utilisateur",
 	"stash.added_user": "{{user}} a été ajouté",
-	"stash.config.confirm-anonymization.confirm-button": "Anonymiser",
-	"stash.config.confirm-anonymization.description": "Une fois les ressources anonymisées, cela ne peut plus être annulé. <br>Remarque : les nouveaux paramètres d'anonymisation n'affecteront pas les ressources existantes",
-	"stash.config.confirm-anonymization.title": "Attention : les ressources futures seront affectées",
-	"stash.config.failure": "Une erreur s'est produite lors de l'enregistrement des paramètres.",
 	"stash.config.key.azure_openai": "Clé Azure OpenAI",
 	"stash.config.key.openai": "Clé OpenAI",
-	"stash.config.option.anthropic": "Anthropic Claude",
-	"stash.config.option.chatgpt": "OpenAI ChatGPT-3.5",
-	"stash.config.option.chatgpt-azure": "OpenAI + Azure ChatGPT-4",
-	"stash.config.option.chatgpt-azure-3": "OpenAI + Azure ChatGPT-3.5",
-	"stash.config.option.cohere": "Cohere Command (beta)",
-	"stash.config.option.disabled": "Désactivé",
-	"stash.config.option.enabled": "Activé",
-	"stash.config.option.gemini-pro": "Google Gemini Pro",
-	"stash.config.option.generative-multilingual-2023": "Mode sans génération",
-	"stash.config.option.multilingual-2023-08-16": "multilingual (alpha)",
-	"stash.config.option.nuclia-atlas-v1": "Nuclia Atlas",
-	"stash.config.option.nuclia-etna-v1": "Nuclia Etna",
-	"stash.config.option.nuclia-everest-v1": "Nuclia Everest",
-	"stash.config.option.palm": "Google PaLM 2 (beta)",
-	"stash.config.option.summary-extended": "Résumé détaillé mettant en avant les sujets marquants et les termes importants",
-	"stash.config.option.summary-simple": "Résumé standard de quelques lignes",
-	"stash.config.own_key": "Utiliser sa propre clé",
-	"stash.config.success": "Les nouveaux paramètres ont été enregistrés avec succès.",
 	"stash.confirm_delete_user.description": "La seule façon d’annuler cette action est de les inviter à nouveau à rejoindre votre Knowledge Box.",
 	"stash.confirm_delete_user.title": "Êtes-vous sûr de vouloir supprimer cet utilisateur ?",
 	"stash.contact_admin": "Vous n'êtes pas autorisé à créer une Knowledge Box. Contactez votre administrateur.",
-	"stash.create.anonymization_model.help": "Appliquer l'anonymisation conforme au Règlement général sur la protection des données (RGPD) à toutes les nouvelles ressources de la Knowledge Box",
-	"stash.create.anonymization_model.label": "Anonymisation",
-	"stash.create.error": "Une erreur s'est produite lors de la création de la Knowledge Box. Veuillez réessayer.",
-	"stash.create.failure": "Quelque chose ne va pas en ce moment. Contactez votre administrateur.",
-	"stash.create.generative_model.help": "Indiquez le modèle utilisé pour générer des réponses aux questions des utilisateurs.",
-	"stash.create.generative_model.label": "Génération de réponses",
-	"stash.create.in_progress": "Création de la Knowledge Box en cours…",
-	"stash.create.semantic_model.help": "Indiquez les langues utilisées dans les informations que vous téléchargerez dans votre KB.",
-	"stash.create.semantic_model.label": "Les langues",
-	"stash.create.summary.help": "Spécifie le type de résumé à la demande à générer",
-	"stash.create.summary.label": "Type de résumé à la demande",
-	"stash.create.summary_model.help": "Indique le modèle utilisé par la fonctionnalité de résumé à la demande",
-	"stash.create.summary_model.label": "Résumé à la demande",
-	"stash.create.summary_prompt.examples": "Exemples",
-	"stash.create.summary_prompt.prompt": "Invite de résumé personnalisée",
-	"stash.create.summary_prompt.prompt_help": "Définit une invite personnalisée qui sera utilisée à la place de l'invite par défaut lors de la génération d'un résumé.",
-	"stash.create.title": "Créer une Knowledge Box",
-	"stash.create.user_prompts.examples": "Exemples",
-	"stash.create.user_prompts.prompt": "Prompt",
-	"stash.create.user_prompts.prompt_help": "Définit la manière dont nous voulons que le système agisse lorsque nous posons une question. Il est possible de définir des règles plus spécifiques, qui peuvent même remplacer le comportement défini. Par exemple, nous pourrions avoir une invite qui oblige le système à ne donner que des résultats sous forme de listes, ou même à demander de répondre dans une langue donnée.",
-	"stash.create.user_prompts.system": "Comportement personnalisé",
-	"stash.create.user_prompts.system_help": "Définit les traits de personnalité généraux de l'assistant, ou la manière dont il doit se comporter lorsqu'il répond à des questions ou au cours d'une conversation. Par exemple, nous pourrions définir que le système répondra en tant que professionnel de la santé.",
-	"stash.create.visual_labeling.help": "Permet de sélectionner visuellement certaines parties de la mise en page du document et de les annoter.",
-	"stash.create.visual_labeling.label": "Annoter par sélection",
-	"stash.create.zone_description": "Sélectionnez la zone et le fournisseur de traitement que vous souhaitez utiliser pour cette Knowledge Box",
 	"stash.delete.delete": "Supprimer la Knowledge Box ?",
 	"stash.delete.error": "Erreur lors de la création de la Knowledge Box",
 	"stash.delete.warning": "Si vous supprimez la Knowledge Box {{ kb }}, toutes les données seront également supprimées",
@@ -816,11 +822,8 @@
 	"stash.email": "Serveur de messagerie",
 	"stash.empty_kb": "La Knowledge Box est vide",
 	"stash.invited_user": "Nous avons envoyé un e-mail d'invitation à {{user}} pour rejoindre cette Knowledge Box.",
-	"stash.kb_name_invalid": "Nom de la Knowledge Box invalide",
-	"stash.kb_slug_invalid": "Limace de boîte de connaissances invalide",
 	"stash.logotip": "Logo",
 	"stash.manage_users": "Gérer les utilisateurs",
-	"stash.name": "Nom de la Knowledge Box",
 	"stash.name_your_kb": "Nommez votre Knowledge Box",
 	"stash.no_knowledge_boxes": "Il n'y a pas de Knowledge Boxes dans ce compte",
 	"stash.preferences.receive_help": "Reçu de l'aide",
@@ -859,9 +862,6 @@
 	"stash.settings.processes.training.start": "Commence l'entraînement",
 	"stash.settings.processes.training.stop": "Arrêter l'entraînement",
 	"stash.settings.processes.training.time_requirement": "Le temps nécessaire pour s'entraîner est d'environ {{hours}}  heures qui seront soustraites des heures disponibles.",
-	"stash.settings.status.label": "Statut",
-	"stash.settings.status.private": "La Knowledge Box est <strong>privée</strong>",
-	"stash.settings.status.published": "La Knowledge Box est <strong>publique</strong>",
 	"stash.stats": "Les données",
 	"stash.title": "Titre de la boîte",
 	"stash.upload.desktop.description": "La manière la plus simple et la plus rapide de charger des données dans Nuclia à partir de vos sources de données",
@@ -941,6 +941,7 @@
 	"upload.warning-spreadsheet-title": "Vous êtes sur le point d'importer {{num}} fichiers de feuille de calcul",
 	"upload.warning-spreadsheets-description": "L'indexation sémantique de ces fichiers peut ne pas être optimale en fonction de leur format et de leur structure. Consultez la <a href=\"{{url}}\" target=\"_blank\">documentation</a> pour plus d'informations.",
 	"user.logout": "Déconnexion",
+	"validation.invalid-slug": "Slug invalide",
 	"validation.name_required": "Ajoutez vos nom et prénom",
 	"validation.url_required": "Saisir une URL valide (par exemple https://nuclia.com)",
 	"widget.copilot.add-label-filters": "Ajouter des filtres par étiquettes",
