--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -48,6 +48,12 @@
 	"account.full_name": "Nom i Cognoms",
 	"account.generate_key": "Generar un nou codi",
 	"account.invited_user": "L'usuari {{user}} ha rebut un correu amb una invitació a participar en aquest compte",
+	"account.kb.add": "Afegir Knowledge Box",
+	"account.kb.count": "{{count}} de {{max}}",
+	"account.kb.edit": "Editar preferències",
+	"account.kb.publish": "Publica",
+	"account.kb.retire": "Despublicar",
+	"account.kb.users": "Gestió d'usuaris",
 	"account.kb-description": "Un Knowledge Box és una col·lecció de contingut en què cerca Nuclia. Alguns motors de cerca l'anomenen \"índex\" o \"corpus\". En la majoria dels casos, només necessiteu un Knowledge Box per a la vostra aplicació.",
 	"account.knowledgeboxes": "Knowledge Boxes",
 	"account.licence": "Llicència",
@@ -71,14 +77,6 @@
 	"account.related_kbs": "Knowledge Boxes del compte",
 	"account.replace_config": "Reemplaçar configuració",
 	"account.speech_to_text_description": "Nuclia ofereix models millorats de veu a text. L'ús d'aquests models requereix un càlcul més elevat i suposen un cost addicional. Marqueu la casella de selecció  si voleu utilitzar els models millorats.",
-	"account.stash.add": "Afegir Knowledge Box",
-	"account.stash.delete": "Borrar",
-	"account.stash.edit": "Editar preferències",
-	"account.stash.publish": "Publica",
-	"account.stash.refresh_counters": "Actualitzar comptadors",
-	"account.stash.retire": "Despublicar",
-	"account.stash.upgrade": "Incrementar màxim KB",
-	"account.stash.users": "Gestió d'usuaris",
 	"account.threshold": "Llindar de consum",
 	"account.title": "Nom",
 	"account.token_description": "<strong>Important!</strong> Copieu i deseu la clau de l'API. Desapareixerà un cop afegit.",
@@ -455,6 +453,61 @@
 	"getting-started.upload.link-textarea.help": "Un URL per línia",
 	"getting-started.upload.link-textarea.label": "Escriviu o enganxeu els URLs de les pàgines web",
 	"getting-started.upload.title": "1. Carregueu dades",
+	"kb.create.error": "Perdó, alguna cosa ha anat malament quan creavem la Knowledge Box. Torneu-ho a intenta, sius plau",
+	"kb.create.failure": "Ho sento, alguna cosa definitivament no funciona en aquest moment. Si us plau, poseu-vos en contacte amb el vostre administrador.",
+	"kb.create.in_progress": "Creació de la Knowledge Box en curs...",
+	"kb.create.invalid_name": "El nom de la Knowledge Box no és vàlid",
+	"kb.create.title": "Crea una Knowledge Box",
+	"kb.invalid-slug": "El Knowledge Box slug no és vàlid",
+	"kb.name": "Nom de la Knowledge Box",
+	"kb.settings.anonymization_toggle.help": "Apliqueu l'anonimat conforme al Reglament General de Protecció de Dades (GDPR) a tots els recursos nous del Knowledge Box",
+	"kb.settings.anonymization_toggle.label": "Anonimatització",
+	"kb.settings.confirm-anonymization.confirm-button": "Anònim",
+	"kb.settings.confirm-anonymization.description": "Un cop anonimitzats els recursos, no es pot desfer. <br>Nota: la nova configuració d'anonimització no afectarà els recursos existents",
+	"kb.settings.confirm-anonymization.title": "Avís: els recursos futurs es veuran afectats",
+	"kb.settings.generative_model.help": "Indiqueu el model utilitzat per generar respostes a les preguntes dels usuaris.",
+	"kb.settings.generative_model.label": "Generació de respostes",
+	"kb.settings.generative_model.options.anthropic": "Anthropic Claude",
+	"kb.settings.generative_model.options.chatgpt": "OpenAI ChatGPT-3.5",
+	"kb.settings.generative_model.options.chatgpt-azure": "OpenAI + Azure ChatGPT-4",
+	"kb.settings.generative_model.options.chatgpt-azure-3": "OpenAI + Azure ChatGPT-3.5",
+	"kb.settings.generative_model.options.cohere": "Cohere Command (beta)",
+	"kb.settings.generative_model.options.disabled": "Desactivat",
+	"kb.settings.generative_model.options.enabled": "Habilitat",
+	"kb.settings.generative_model.options.gemini-pro": "Google Gemini Pro",
+	"kb.settings.generative_model.options.generative-multilingual-2023": "Mode sense generació",
+	"kb.settings.generative_model.options.multilingual-2023-08-16": "multilingual (alpha)",
+	"kb.settings.generative_model.options.nuclia-atlas-v1": "Nuclia Atlas",
+	"kb.settings.generative_model.options.nuclia-etna-v1": "Nuclia Etna",
+	"kb.settings.generative_model.options.nuclia-everest-v1": "Nuclia Everest",
+	"kb.settings.generative_model.options.palm": "Google PaLM 2 (beta)",
+	"kb.settings.generative_model.options.summary-extended": "Resum detallat amb una llista de punts destacats i termes rellevants",
+	"kb.settings.generative_model.options.summary-simple": "Resum estàndard d'un parell de línies",
+	"kb.settings.generative_model.system_prompt_label": "Comportament",
+	"kb.settings.models-section.advanced": "Avançat",
+	"kb.settings.models-section.title": "Models i prompts",
+	"kb.settings.pdf_annotation_toggle.help": "Permet seleccionar visualment algunes parts del disseny del document i anotar-les.",
+	"kb.settings.pdf_annotation_toggle.label": "Anotar per selecció",
+	"kb.settings.semantic.help": "El model semàntic depèn dels idiomes que heu seleccionat en crear aquest Knowledge Box",
+	"kb.settings.semantic.label": "Model semàntic",
+	"kb.settings.status.label": "Knowledge Box estat: <strong>{{state}}</strong>",
+	"kb.settings.status.private": "privada",
+	"kb.settings.status.published": "públic",
+	"kb.settings.summary.help": "Especifica el tipus de resum a demanda que s'ha de generar",
+	"kb.settings.summary.label": "Tipus de resum a demanda",
+	"kb.settings.summary_model.help": "Indiqueu el model utilitzat per la funció de resum a demanda",
+	"kb.settings.summary_model.label": "Resum a demanda",
+	"kb.settings.summary_prompt.examples": "Exemples",
+	"kb.settings.summary_prompt.prompt": "Sol·licitud de resum personalitzada",
+	"kb.settings.summary_prompt.prompt_help": "Defineix una indicació personalitzada que s'utilitzarà en lloc de la sol·licitud predeterminada quan es generi un resum.",
+	"kb.settings.toasts.failure": "S'ha produït un error en desar la configuració.",
+	"kb.settings.toasts.success": "La nova configuració s'ha desat correctament.",
+	"kb.settings.use_own_key.label": "Utilitzeu la vostra pròpia clau per al model seleccionat",
+	"kb.settings.user_prompts.examples": "Exemples",
+	"kb.settings.user_prompts.prompt": "Prompt",
+	"kb.settings.user_prompts.prompt_help": "Defineix la manera com volem que actuï el sistema quan fem una pregunta. Aquí podem definir regles més específiques, que fins i tot podrien anul·lar el comportament definit. Per exemple, podríem tenir una indicació que fa que el sistema només doni resultats en llistes, o fins i tot demani que respongui en un idioma determinat.",
+	"kb.settings.user_prompts.system": "Comportament personalitzat",
+	"kb.settings.user_prompts.system_help": "Defineix els trets generals de la personalitat de l'assistent o com s'ha de comportar quan respon a preguntes o durant una conversa. Per exemple, podríem definir que el sistema respondrà com a professional de la salut.",
 	"label-set.add": "Afegeix conjunt d'etiquetes",
 	"label-set.add-button": "Afegir nou",
 	"label-set.delete.confirm-description": "Si suprimiu el conjunt d'etiquetes, també se suprimiran totes les seves etiquetes. No podeu desfer aquesta acció. També pot afectar les formacions en curs i els suggeriments generats.",
@@ -756,58 +809,11 @@
 	"standalone.upload-no-nua-key": "No esteu connectat al servidor <strong>nuclia.cloud</strong> i les dades noves no es processaran.",
 	"stash.add_user": "Afegeix l'usuari",
 	"stash.added_user": "L'usuari {{user}} s'ha afegit",
-	"stash.config.confirm-anonymization.confirm-button": "Anònim",
-	"stash.config.confirm-anonymization.description": "Un cop anonimitzats els recursos, no es pot desfer. <br>Nota: la nova configuració d'anonimització no afectarà els recursos existents",
-	"stash.config.confirm-anonymization.title": "Avís: els recursos futurs es veuran afectats",
-	"stash.config.failure": "S'ha produït un error en desar la configuració.",
 	"stash.config.key.azure_openai": "Azure OpenAI key",
 	"stash.config.key.openai": "OpenAI key",
-	"stash.config.option.anthropic": "Anthropic Claude",
-	"stash.config.option.chatgpt": "OpenAI ChatGPT-3.5",
-	"stash.config.option.chatgpt-azure": "OpenAI + Azure ChatGPT-4",
-	"stash.config.option.chatgpt-azure-3": "OpenAI + Azure ChatGPT-3.5",
-	"stash.config.option.cohere": "Cohere Command (beta)",
-	"stash.config.option.disabled": "Desactivat",
-	"stash.config.option.enabled": "Habilitat",
-	"stash.config.option.gemini-pro": "Google Gemini Pro",
-	"stash.config.option.generative-multilingual-2023": "Mode sense generació",
-	"stash.config.option.multilingual-2023-08-16": "multilingual (alpha)",
-	"stash.config.option.nuclia-atlas-v1": "Nuclia Atlas",
-	"stash.config.option.nuclia-etna-v1": "Nuclia Etna",
-	"stash.config.option.nuclia-everest-v1": "Nuclia Everest",
-	"stash.config.option.palm": "Google PaLM 2 (beta)",
-	"stash.config.option.summary-extended": "Resum detallat amb una llista de punts destacats i termes rellevants",
-	"stash.config.option.summary-simple": "Resum estàndard d'un parell de línies",
-	"stash.config.own_key": "Utilitzar key pròpia",
-	"stash.config.success": "La nova configuració s'ha desat correctament.",
 	"stash.confirm_delete_user.description": "L'única manera de desfer aquesta acció és convidant-lo de nou a unir-se a la Knowledge Box.",
 	"stash.confirm_delete_user.title": "Estas segur que vols eliminar aquest usuari?",
 	"stash.contact_admin": "No esteu autoritzat per crear un Knowledge Box. Contacta amb el teu administrador.",
-	"stash.create.anonymization_model.help": "Apliqueu l'anonimat conforme al Reglament General de Protecció de Dades (GDPR) a tots els recursos nous del Knowledge Box",
-	"stash.create.anonymization_model.label": "Anonimatització",
-	"stash.create.error": "Perdó, alguna cosa ha anat malament quan creavem la Knowledge Box. Torneu-ho a intenta, sius plau",
-	"stash.create.failure": "Ho sento, alguna cosa definitivament no funciona en aquest moment. Si us plau, poseu-vos en contacte amb el vostre administrador.",
-	"stash.create.generative_model.help": "Indiqueu el model utilitzat per generar respostes a les preguntes dels usuaris.",
-	"stash.create.generative_model.label": "Generació de respostes",
-	"stash.create.in_progress": "Creació de la Knowledge Box en curs...",
-	"stash.create.semantic_model.help": "Indiqueu els idiomes utilitzats a la informació que penjareu a la vostra KB.",
-	"stash.create.semantic_model.label": "Idiomes",
-	"stash.create.summary.help": "Especifica el tipus de resum a demanda que s'ha de generar",
-	"stash.create.summary.label": "Tipus de resum a demanda",
-	"stash.create.summary_model.help": "Indiqueu el model utilitzat per la funció de resum a demanda",
-	"stash.create.summary_model.label": "Resum a demanda",
-	"stash.create.summary_prompt.examples": "Exemples",
-	"stash.create.summary_prompt.prompt": "Sol·licitud de resum personalitzada",
-	"stash.create.summary_prompt.prompt_help": "Defineix una indicació personalitzada que s'utilitzarà en lloc de la sol·licitud predeterminada quan es generi un resum.",
-	"stash.create.title": "Crea una Knowledge Box",
-	"stash.create.user_prompts.examples": "Exemples",
-	"stash.create.user_prompts.prompt": "Prompt",
-	"stash.create.user_prompts.prompt_help": "Defineix la manera com volem que actuï el sistema quan fem una pregunta. Aquí podem definir regles més específiques, que fins i tot podrien anul·lar el comportament definit. Per exemple, podríem tenir una indicació que fa que el sistema només doni resultats en llistes, o fins i tot demani que respongui en un idioma determinat.",
-	"stash.create.user_prompts.system": "Comportament personalitzat",
-	"stash.create.user_prompts.system_help": "Defineix els trets generals de la personalitat de l'assistent o com s'ha de comportar quan respon a preguntes o durant una conversa. Per exemple, podríem definir que el sistema respondrà com a professional de la salut.",
-	"stash.create.visual_labeling.help": "Permet seleccionar visualment algunes parts del disseny del document i anotar-les.",
-	"stash.create.visual_labeling.label": "Anotar per selecció",
-	"stash.create.zone_description": "Seleccioneu la zona i el proveïdor de processament que voleu utilitzar per a aquest Knowledge Box",
 	"stash.delete.delete": "Eliminar Knowledge Box?",
 	"stash.delete.error": "Error en crear el Knowledge Box",
 	"stash.delete.warning": "Si borres la Knowledge Box {{ kb }} també s'esborraran totes les dades que conté.",
@@ -815,11 +821,8 @@
 	"stash.email": "Servidor de correu",
 	"stash.empty_kb": "La Knowledge Box encara està buida!",
 	"stash.invited_user": "L'usuari {{user}} ha rebut un correu amb una invitació a participar a la Knowledge Box.",
-	"stash.kb_name_invalid": "El nom de la Knowledge Box no és vàlid",
-	"stash.kb_slug_invalid": "El slug de la caixa de coneixement no és vàlid",
 	"stash.logotip": "Logotip",
 	"stash.manage_users": "Gestionar usuaris",
-	"stash.name": "Nom de la Knowledge Box",
 	"stash.name_your_kb": "Anomena el teu Knowledge Box",
 	"stash.no_knowledge_boxes": "No hi ha cap cas de Knowledge Boxes en aquest compte",
 	"stash.preferences.receive_help": "Rebre ajuda",
@@ -858,9 +861,6 @@
 	"stash.settings.processes.training.start": "Comença a entrenar",
 	"stash.settings.processes.training.stop": "Deixa d'entrenar",
 	"stash.settings.processes.training.time_requirement": "El temps necessari per entrenar és d'unes {{hours}} hores que es restaran de les hores disponibles.",
-	"stash.settings.status.label": "Estat",
-	"stash.settings.status.private": "La Knowledge Box és <strong>privada</strong>",
-	"stash.settings.status.published": "La Knowledge Box és <strong>públic</strong>",
 	"stash.stats": "Dades",
 	"stash.title": "Títol de la caixa",
 	"stash.upload.desktop.description": "La manera més fàcil i ràpida de carregar dades a Nuclia des de les vostres fonts de dades",
@@ -940,6 +940,7 @@
 	"upload.warning-spreadsheet-title": "Estas a punt de pujar {{num}} fitxers de full de càlcul",
 	"upload.warning-spreadsheets-description": "És possible que la indexació semàntica d'aquests fitxersno sigui òptima en funció del seu format i estructura. Consulteu la <a href=\"{{url}}\" target=\"_blank\">documentació</a> per a més informació.",
 	"user.logout": "Sortir",
+	"validation.invalid-slug": "Slug no vàlid",
 	"validation.name_required": "Introdueix el nom i cognoms",
 	"validation.url_required": "Introdueix una URL vàlida (per exemple https://nuclia.com)",
 	"widget.copilot.add-label-filters": "Afegiu filtres per etiquetes",
