--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -48,6 +48,12 @@
 	"account.full_name": "Nombre y Apellidos",
 	"account.generate_key": "Generar un nuevo código",
 	"account.invited_user": "Hemos enviado un correo a {{user}} invitándolo en esta cuenta",
+	"account.kb.add": "Añadir Knowledge Box",
+	"account.kb.count": "{{count}} de {{max}}",
+	"account.kb.edit": "Editar preferencias",
+	"account.kb.publish": "Publicar",
+	"account.kb.retire": "Despublicar",
+	"account.kb.users": "Gestión de usuarios",
 	"account.kb-description": "Una caja de conocimiento es una colección de contenido en la que Nuclia busca. Algunos motores de búsqueda lo llaman \"índice\" o \"corpus\". En la mayoría de los casos, solo necesita un Knowledge Box para su aplicación.",
 	"account.knowledgeboxes": "Knowledge Boxes",
 	"account.licence": "Licencia",
@@ -71,14 +77,6 @@
 	"account.related_kbs": "Knowledge Boxes de la cuenta",
 	"account.replace_config": "Reemplazar configuración",
 	"account.speech_to_text_description": "Nuclia ofrece modelos mejorados de voz a texto. El uso de estos modelos requiere un cómputo mayor y tienen un costo extra. Marque la siguiente casilla de verificación si desea utilizar los modelos mejorados.",
-	"account.stash.add": "Añadir Knowledge Box",
-	"account.stash.delete": "Borrar",
-	"account.stash.edit": "Editar preferencias",
-	"account.stash.publish": "Publicar",
-	"account.stash.refresh_counters": "Actualizar contadores",
-	"account.stash.retire": "Despublicar",
-	"account.stash.upgrade": "Incrementar el máximo de KB",
-	"account.stash.users": "Gestión de usuarios",
 	"account.threshold": "Umbral de consumo",
 	"account.title": "Nombre",
 	"account.token_description": "<strong>¡Importante!</strong> Copie y guarde la clave API. Desaparecerá una vez añadido.",
@@ -455,6 +453,61 @@
 	"getting-started.upload.link-textarea.help": "Una URL por línea",
 	"getting-started.upload.link-textarea.label": "Escriba o pegue las URLs de páginas web",
 	"getting-started.upload.title": "1. Cargar datos",
+	"kb.create.error": "Perdon, alguna cosa pasó mal cuando creabamos la Knowledge Box. Por favor vuelve a intentarlo.",
+	"kb.create.failure": "Lo siento, definitivamente algo anda mal en este momento. Por favor, póngase en contacto con su administrador.",
+	"kb.create.in_progress": "Creación de la Knowledge Box en curso...",
+	"kb.create.invalid_name": "El nombre de la Knowledge Box no es válido",
+	"kb.create.title": "Crea una Knowledge Box",
+	"kb.invalid-slug": "El Knowledge Box slug no es válido",
+	"kb.name": "Nombre de la Knowledge Box",
+	"kb.settings.anonymization_toggle.help": "Aplicar la anonimización conforme al Reglamento general de protección de datos (GDPR) a todos los recursos nuevos en el Knowledge Box",
+	"kb.settings.anonymization_toggle.label": "Anonimización",
+	"kb.settings.confirm-anonymization.confirm-button": "Anonimizar",
+	"kb.settings.confirm-anonymization.description": "Una vez que los recursos se anonimizan, no se puede deshacer. <br>Nota: la nueva configuración de anonimización no afectará los recursos existentes",
+	"kb.settings.confirm-anonymization.title": "Advertencia: los recursos futuros se verán afectados",
+	"kb.settings.generative_model.help": "Indique el modelo utilizado para generar respuestas a las preguntas de los usuarios.",
+	"kb.settings.generative_model.label": "Generación de respuesta",
+	"kb.settings.generative_model.options.anthropic": "Anthropic Claude",
+	"kb.settings.generative_model.options.chatgpt": "OpenAI ChatGPT-3.5",
+	"kb.settings.generative_model.options.chatgpt-azure": "OpenAI + Azure ChatGPT-4",
+	"kb.settings.generative_model.options.chatgpt-azure-3": "OpenAI + Azure ChatGPT-3.5",
+	"kb.settings.generative_model.options.cohere": "Cohere Command (beta)",
+	"kb.settings.generative_model.options.disabled": "Deshabilitado",
+	"kb.settings.generative_model.options.enabled": "Habilitado",
+	"kb.settings.generative_model.options.gemini-pro": "Google Gemini Pro",
+	"kb.settings.generative_model.options.generative-multilingual-2023": "Modo sin generación",
+	"kb.settings.generative_model.options.multilingual-2023-08-16": "multilingual (alpha)",
+	"kb.settings.generative_model.options.nuclia-atlas-v1": "Nuclia Atlas",
+	"kb.settings.generative_model.options.nuclia-etna-v1": "Nuclia Etna",
+	"kb.settings.generative_model.options.nuclia-everest-v1": "Nuclia Everest",
+	"kb.settings.generative_model.options.palm": "Google PaLM 2 (beta)",
+	"kb.settings.generative_model.options.summary-extended": "Resumen detallado con listado de puntos destacados y términos relevantes",
+	"kb.settings.generative_model.options.summary-simple": "Sumario estándar de un par de líneas.",
+	"kb.settings.generative_model.system_prompt_label": "Comportamiento",
+	"kb.settings.models-section.advanced": "Avanzado",
+	"kb.settings.models-section.title": "Modelos e prompts",
+	"kb.settings.pdf_annotation_toggle.help": "Permita seleccionar visualmente algunas partes del diseño del documento y anotarlas.",
+	"kb.settings.pdf_annotation_toggle.label": "Anotar por selección",
+	"kb.settings.semantic.help": "El modelo semántico depende de los idiomas que seleccionó al crear este cuadro de conocimiento.",
+	"kb.settings.semantic.label": "Modelo semántico",
+	"kb.settings.status.label": "Knowledge Box estado: <strong>{{state}}</strong>",
+	"kb.settings.status.private": "privado",
+	"kb.settings.status.published": "público",
+	"kb.settings.summary.help": "Especifica el tipo de resumen a petición que debe generarse",
+	"kb.settings.summary.label": "Tipo de resumen bajo demanda",
+	"kb.settings.summary_model.help": "Indique el modelo utilizado por la función de resumen bajo demanda",
+	"kb.settings.summary_model.label": "Resumen bajo demanda",
+	"kb.settings.summary_prompt.examples": "Ejemplos",
+	"kb.settings.summary_prompt.prompt": "Petición de resumen personalizada",
+	"kb.settings.summary_prompt.prompt_help": "Define un mensaje personalizado que se utilizará en lugar del mensaje predeterminado al generar un resumen.",
+	"kb.settings.toasts.failure": "Se produjo un error al guardar la configuración.",
+	"kb.settings.toasts.success": "La nueva configuración se ha guardado correctamente.",
+	"kb.settings.use_own_key.label": "Utilice su propia clave para el modelo seleccionado",
+	"kb.settings.user_prompts.examples": "Ejemplos",
+	"kb.settings.user_prompts.prompt": "Prompt",
+	"kb.settings.user_prompts.prompt_help": "Define la forma en que queremos que actúe el sistema cuando hacemos una pregunta. Aquí podemos definir reglas más específicas, que incluso podrían anular el comportamiento definido. Por ejemplo, podríamos tener una pregunta que haga que el sistema sólo dé resultados en listas, o incluso que pida responder en un idioma determinado.",
+	"kb.settings.user_prompts.system": "Comportamiento personalizado",
+	"kb.settings.user_prompts.system_help": "Define rasgos generales de la personalidad del asistente, o sobre cómo debe comportarse al responder preguntas/ durante una conversación. Por ejemplo, podríamos definir que el sistema responda como un profesional sanitario.",
 	"label-set.add": "Agregar conjunto de etiquetas",
 	"label-set.add-button": "Añadir nuevo",
 	"label-set.delete.confirm-description": "Al eliminar el conjunto de etiquetas, también se eliminarán todas sus etiquetas. No puede deshacer esta acción. También podría afectar las capacitaciones en curso y las sugerencias generadas.",
@@ -756,58 +809,11 @@
 	"standalone.upload-no-nua-key": "No estás conectado al servidor <strong>nuclia.cloud</strong> y no se procesarán nuevos datos.",
 	"stash.add_user": "Añadir usuario",
 	"stash.added_user": "El usuario {{user}} ha sido añadido",
-	"stash.config.confirm-anonymization.confirm-button": "Anonimizar",
-	"stash.config.confirm-anonymization.description": "Una vez que los recursos se anonimizan, no se puede deshacer. <br>Nota: la nueva configuración de anonimización no afectará los recursos existentes",
-	"stash.config.confirm-anonymization.title": "Advertencia: los recursos futuros se verán afectados",
-	"stash.config.failure": "Se produjo un error al guardar la configuración.",
 	"stash.config.key.azure_openai": "Azure OpenAI key",
 	"stash.config.key.openai": "OpenAI key",
-	"stash.config.option.anthropic": "Anthropic Claude",
-	"stash.config.option.chatgpt": "OpenAI ChatGPT-3.5",
-	"stash.config.option.chatgpt-azure": "OpenAI + Azure ChatGPT-4",
-	"stash.config.option.chatgpt-azure-3": "OpenAI + Azure ChatGPT-3.5",
-	"stash.config.option.cohere": "Cohere Command (beta)",
-	"stash.config.option.disabled": "Deshabilitado",
-	"stash.config.option.enabled": "Habilitado",
-	"stash.config.option.gemini-pro": "Google Gemini Pro",
-	"stash.config.option.generative-multilingual-2023": "Modo sin generación",
-	"stash.config.option.multilingual-2023-08-16": "multilingual (alpha)",
-	"stash.config.option.nuclia-atlas-v1": "Nuclia Atlas",
-	"stash.config.option.nuclia-etna-v1": "Nuclia Etna",
-	"stash.config.option.nuclia-everest-v1": "Nuclia Everest",
-	"stash.config.option.palm": "Google PaLM 2 (beta)",
-	"stash.config.option.summary-extended": "Resumen detallado con listado de puntos destacados y términos relevantes",
-	"stash.config.option.summary-simple": "Sumario estándar de un par de líneas.",
-	"stash.config.own_key": "Utilizar key propia",
-	"stash.config.success": "La nueva configuración se ha guardado correctamente.",
 	"stash.confirm_delete_user.description": "La única forma de deshacer esta acción es invitandolo de nuevo a unirse a la Knowledge Box.",
 	"stash.confirm_delete_user.title": "¿Estás seguro de que deseas eliminar este usuario?",
 	"stash.contact_admin": "No está autorizado para crear un Knowledge Box. Póngase en contacto con su administrador.",
-	"stash.create.anonymization_model.help": "Aplicar la anonimización conforme al Reglamento general de protección de datos (GDPR) a todos los recursos nuevos en el Knowledge Box",
-	"stash.create.anonymization_model.label": "Anonimización",
-	"stash.create.error": "Perdon, alguna cosa pasó mal cuando creabamos la Knowledge Box. Por favor vuelve a intentarlo.",
-	"stash.create.failure": "Lo siento, definitivamente algo anda mal en este momento. Por favor, póngase en contacto con su administrador.",
-	"stash.create.generative_model.help": "Indique el modelo utilizado para generar respuestas a las preguntas de los usuarios.",
-	"stash.create.generative_model.label": "Generación de respuesta",
-	"stash.create.in_progress": "Creación de la Knowledge Box en curso...",
-	"stash.create.semantic_model.help": "Indica los idiomas utilizados en la información que subirás en tu KB.",
-	"stash.create.semantic_model.label": "Idiomas",
-	"stash.create.summary.help": "Especifica el tipo de resumen a petición que debe generarse",
-	"stash.create.summary.label": "Tipo de resumen bajo demanda",
-	"stash.create.summary_model.help": "Indique el modelo utilizado por la función de resumen bajo demanda",
-	"stash.create.summary_model.label": "Resumen bajo demanda",
-	"stash.create.summary_prompt.examples": "Ejemplos",
-	"stash.create.summary_prompt.prompt": "Petición de resumen personalizada",
-	"stash.create.summary_prompt.prompt_help": "Define un mensaje personalizado que se utilizará en lugar del mensaje predeterminado al generar un resumen.",
-	"stash.create.title": "Crea una Knowledge Box",
-	"stash.create.user_prompts.examples": "Ejemplos",
-	"stash.create.user_prompts.prompt": "Prompt",
-	"stash.create.user_prompts.prompt_help": "Define la forma en que queremos que actúe el sistema cuando hacemos una pregunta. Aquí podemos definir reglas más específicas, que incluso podrían anular el comportamiento definido. Por ejemplo, podríamos tener una pregunta que haga que el sistema sólo dé resultados en listas, o incluso que pida responder en un idioma determinado.",
-	"stash.create.user_prompts.system": "Comportamiento personalizado",
-	"stash.create.user_prompts.system_help": "Define rasgos generales de la personalidad del asistente, o sobre cómo debe comportarse al responder preguntas/ durante una conversación. Por ejemplo, podríamos definir que el sistema responda como un profesional sanitario.",
-	"stash.create.visual_labeling.help": "Permita seleccionar visualmente algunas partes del diseño del documento y anotarlas.",
-	"stash.create.visual_labeling.label": "Anotar por selección",
-	"stash.create.zone_description": "Seleccione la zona y el proveedor de procesamiento que le gustaría utilizar para este Knowledge Box",
 	"stash.delete.delete": "¿Eliminar Knowledge Box?",
 	"stash.delete.error": "Error al crear el Knowledge Box",
 	"stash.delete.warning": "Si eliminas la Knowledge Box {{ kb }} también se eliminaran todos los datos que contenga",
@@ -815,11 +821,8 @@
 	"stash.email": "Servidor de correo",
 	"stash.empty_kb": "!La Knowledge Box aun está vacía!",
 	"stash.invited_user": "Hemos enviado un correo a {{user}} invitándolo en esta Knowledge Box",
-	"stash.kb_name_invalid": "El nombre de la Knowledge Box no es válido",
-	"stash.kb_slug_invalid": "El slug de la caja de conocimiento no es válido",
 	"stash.logotip": "Logotipo",
 	"stash.manage_users": "Gestionar usuarios",
-	"stash.name": "Nombre de la Knowledge Box",
 	"stash.name_your_kb": "Nombra tu Knowledge Box",
 	"stash.no_knowledge_boxes": "No hay Knowledge Boxes en esta cuenta.",
 	"stash.preferences.receive_help": "Recibir ayuda",
@@ -858,9 +861,6 @@
 	"stash.settings.processes.training.start": "Empezar a entrenar",
 	"stash.settings.processes.training.stop": "Dejar de entrenar",
 	"stash.settings.processes.training.time_requirement": "El tiempo necesario para entrenar es de unas {{hours}} horas que se restarán de las horas disponibles.",
-	"stash.settings.status.label": "Estado",
-	"stash.settings.status.private": "El Knowledge Box es <strong>privado</strong>",
-	"stash.settings.status.published": "El Knowledge Box es <strong>público</strong>",
 	"stash.stats": "Datos",
 	"stash.title": "Título de la caja",
 	"stash.upload.desktop.description": "La forma más fácil y rápida de cargar datos en Nuclia desde sus fuentes de datos",
@@ -940,6 +940,7 @@
 	"upload.warning-spreadsheet-title": "Estás a punto de cargar {{num}} archivos de hoja de cálculo",
 	"upload.warning-spreadsheets-description": "Es posible que la indexación semántica de estos archivos no sea óptima en funcion de su formato y estructura. Consulte la <a href=\"{{url}}\" target=\"_blank\">documentación</a> para obtener más información.",
 	"user.logout": "Salir",
+	"validation.invalid-slug": "Slug no válido",
 	"validation.name_required": "Añade tu nombre y apellidos",
 	"validation.url_required": "Introduce una URL válida (por ejemplo https://nuclia.com)",
 	"widget.copilot.add-label-filters": "Agregar filtros por etiquetas",
