Fix KB settings [sc-8276]
- Fix learningOption pipe with new translation keys (and use it in KB home page)
- enable save button when changing just anonymization or PDF annotation toggles
- Fix payload for user prompts

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -468,23 +468,23 @@
 	"kb.settings.confirm-anonymization.title": "Warning: future resources will be affected",
 	"kb.settings.generative_model.help": "Indicate the model used to generate answers to user questions.",
 	"kb.settings.generative_model.label": "Answer generation",
-	"kb.settings.generative_model.options.anthropic": "Anthropic Claude",
-	"kb.settings.generative_model.options.chatgpt": "OpenAI ChatGPT-3.5",
-	"kb.settings.generative_model.options.chatgpt-azure": "OpenAI + Azure ChatGPT-4",
-	"kb.settings.generative_model.options.chatgpt-azure-3": "OpenAI + Azure ChatGPT-3.5",
-	"kb.settings.generative_model.options.cohere": "Cohere Command (beta)",
-	"kb.settings.generative_model.options.disabled": "Disabled",
-	"kb.settings.generative_model.options.enabled": "Enabled",
-	"kb.settings.generative_model.options.gemini-pro": "Google Gemini Pro",
-	"kb.settings.generative_model.options.generative-multilingual-2023": "No-Generation Mode",
-	"kb.settings.generative_model.options.multilingual-2023-08-16": "multilingual (alpha)",
-	"kb.settings.generative_model.options.nuclia-atlas-v1": "Nuclia Atlas",
-	"kb.settings.generative_model.options.nuclia-etna-v1": "Nuclia Etna",
-	"kb.settings.generative_model.options.nuclia-everest-v1": "Nuclia Everest",
-	"kb.settings.generative_model.options.palm": "Google PaLM 2 (beta)",
-	"kb.settings.generative_model.options.summary-extended": "Detailed summary with a list of highlights and relevant terms",
-	"kb.settings.generative_model.options.summary-simple": "Standard summary of a couple of lines",
 	"kb.settings.generative_model.system_prompt_label": "Behavior",
+	"kb.settings.learning-options.anthropic": "Anthropic Claude",
+	"kb.settings.learning-options.chatgpt": "OpenAI ChatGPT-3.5",
+	"kb.settings.learning-options.chatgpt-azure": "OpenAI + Azure ChatGPT-4",
+	"kb.settings.learning-options.chatgpt-azure-3": "OpenAI + Azure ChatGPT-3.5",
+	"kb.settings.learning-options.cohere": "Cohere Command (beta)",
+	"kb.settings.learning-options.disabled": "Disabled",
+	"kb.settings.learning-options.enabled": "Enabled",
+	"kb.settings.learning-options.gemini-pro": "Google Gemini Pro",
+	"kb.settings.learning-options.generative-multilingual-2023": "No-Generation Mode",
+	"kb.settings.learning-options.multilingual-2023-08-16": "multilingual (alpha)",
+	"kb.settings.learning-options.nuclia-atlas-v1": "Nuclia Atlas",
+	"kb.settings.learning-options.nuclia-etna-v1": "Nuclia Etna",
+	"kb.settings.learning-options.nuclia-everest-v1": "Nuclia Everest",
+	"kb.settings.learning-options.palm": "Google PaLM 2 (beta)",
+	"kb.settings.learning-options.summary-extended": "Detailed summary with a list of highlights and relevant terms",
+	"kb.settings.learning-options.summary-simple": "Standard summary of a couple of lines",
 	"kb.settings.models-section.advanced": "Advanced",
 	"kb.settings.models-section.title": "Models and prompts",
 	"kb.settings.pdf_annotation_toggle.help": "Allow to visually select some parts of the document layout and annotate them.",
