--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -467,23 +467,23 @@
 	"kb.settings.confirm-anonymization.title": "Avís: els recursos futurs es veuran afectats",
 	"kb.settings.generative_model.help": "Indiqueu el model utilitzat per generar respostes a les preguntes dels usuaris.",
 	"kb.settings.generative_model.label": "Generació de respostes",
-	"kb.settings.generative_model.options.anthropic": "Anthropic Claude",
-	"kb.settings.generative_model.options.chatgpt": "OpenAI ChatGPT-3.5",
-	"kb.settings.generative_model.options.chatgpt-azure": "OpenAI + Azure ChatGPT-4",
-	"kb.settings.generative_model.options.chatgpt-azure-3": "OpenAI + Azure ChatGPT-3.5",
-	"kb.settings.generative_model.options.cohere": "Cohere Command (beta)",
-	"kb.settings.generative_model.options.disabled": "Desactivat",
-	"kb.settings.generative_model.options.enabled": "Habilitat",
-	"kb.settings.generative_model.options.gemini-pro": "Google Gemini Pro",
-	"kb.settings.generative_model.options.generative-multilingual-2023": "Mode sense generació",
-	"kb.settings.generative_model.options.multilingual-2023-08-16": "multilingual (alpha)",
-	"kb.settings.generative_model.options.nuclia-atlas-v1": "Nuclia Atlas",
-	"kb.settings.generative_model.options.nuclia-etna-v1": "Nuclia Etna",
-	"kb.settings.generative_model.options.nuclia-everest-v1": "Nuclia Everest",
-	"kb.settings.generative_model.options.palm": "Google PaLM 2 (beta)",
-	"kb.settings.generative_model.options.summary-extended": "Resum detallat amb una llista de punts destacats i termes rellevants",
-	"kb.settings.generative_model.options.summary-simple": "Resum estàndard d'un parell de línies",
 	"kb.settings.generative_model.system_prompt_label": "Comportament",
+	"kb.settings.learning-options.anthropic": "Anthropic Claude",
+	"kb.settings.learning-options.chatgpt": "OpenAI ChatGPT-3.5",
+	"kb.settings.learning-options.chatgpt-azure": "OpenAI + Azure ChatGPT-4",
+	"kb.settings.learning-options.chatgpt-azure-3": "OpenAI + Azure ChatGPT-3.5",
+	"kb.settings.learning-options.cohere": "Cohere Command (beta)",
+	"kb.settings.learning-options.disabled": "Desactivat",
+	"kb.settings.learning-options.enabled": "Habilitat",
+	"kb.settings.learning-options.gemini-pro": "Google Gemini Pro",
+	"kb.settings.learning-options.generative-multilingual-2023": "Mode sense generació",
+	"kb.settings.learning-options.multilingual-2023-08-16": "multilingual (alpha)",
+	"kb.settings.learning-options.nuclia-atlas-v1": "Nuclia Atlas",
+	"kb.settings.learning-options.nuclia-etna-v1": "Nuclia Etna",
+	"kb.settings.learning-options.nuclia-everest-v1": "Nuclia Everest",
+	"kb.settings.learning-options.palm": "Google PaLM 2 (beta)",
+	"kb.settings.learning-options.summary-extended": "Resum detallat amb una llista de punts destacats i termes rellevants",
+	"kb.settings.learning-options.summary-simple": "Resum estàndard d'un parell de línies",
 	"kb.settings.models-section.advanced": "Avançat",
 	"kb.settings.models-section.title": "Models i prompts",
 	"kb.settings.pdf_annotation_toggle.help": "Permet seleccionar visualment algunes parts del disseny del document i anotar-les.",
