--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -467,23 +467,23 @@
 	"kb.settings.confirm-anonymization.title": "Advertencia: los recursos futuros se verán afectados",
 	"kb.settings.generative_model.help": "Indique el modelo utilizado para generar respuestas a las preguntas de los usuarios.",
 	"kb.settings.generative_model.label": "Generación de respuesta",
-	"kb.settings.generative_model.options.anthropic": "Anthropic Claude",
-	"kb.settings.generative_model.options.chatgpt": "OpenAI ChatGPT-3.5",
-	"kb.settings.generative_model.options.chatgpt-azure": "OpenAI + Azure ChatGPT-4",
-	"kb.settings.generative_model.options.chatgpt-azure-3": "OpenAI + Azure ChatGPT-3.5",
-	"kb.settings.generative_model.options.cohere": "Cohere Command (beta)",
-	"kb.settings.generative_model.options.disabled": "Deshabilitado",
-	"kb.settings.generative_model.options.enabled": "Habilitado",
-	"kb.settings.generative_model.options.gemini-pro": "Google Gemini Pro",
-	"kb.settings.generative_model.options.generative-multilingual-2023": "Modo sin generación",
-	"kb.settings.generative_model.options.multilingual-2023-08-16": "multilingual (alpha)",
-	"kb.settings.generative_model.options.nuclia-atlas-v1": "Nuclia Atlas",
-	"kb.settings.generative_model.options.nuclia-etna-v1": "Nuclia Etna",
-	"kb.settings.generative_model.options.nuclia-everest-v1": "Nuclia Everest",
-	"kb.settings.generative_model.options.palm": "Google PaLM 2 (beta)",
-	"kb.settings.generative_model.options.summary-extended": "Resumen detallado con listado de puntos destacados y términos relevantes",
-	"kb.settings.generative_model.options.summary-simple": "Sumario estándar de un par de líneas.",
 	"kb.settings.generative_model.system_prompt_label": "Comportamiento",
+	"kb.settings.learning-options.anthropic": "Anthropic Claude",
+	"kb.settings.learning-options.chatgpt": "OpenAI ChatGPT-3.5",
+	"kb.settings.learning-options.chatgpt-azure": "OpenAI + Azure ChatGPT-4",
+	"kb.settings.learning-options.chatgpt-azure-3": "OpenAI + Azure ChatGPT-3.5",
+	"kb.settings.learning-options.cohere": "Cohere Command (beta)",
+	"kb.settings.learning-options.disabled": "Deshabilitado",
+	"kb.settings.learning-options.enabled": "Habilitado",
+	"kb.settings.learning-options.gemini-pro": "Google Gemini Pro",
+	"kb.settings.learning-options.generative-multilingual-2023": "Modo sin generación",
+	"kb.settings.learning-options.multilingual-2023-08-16": "multilingual (alpha)",
+	"kb.settings.learning-options.nuclia-atlas-v1": "Nuclia Atlas",
+	"kb.settings.learning-options.nuclia-etna-v1": "Nuclia Etna",
+	"kb.settings.learning-options.nuclia-everest-v1": "Nuclia Everest",
+	"kb.settings.learning-options.palm": "Google PaLM 2 (beta)",
+	"kb.settings.learning-options.summary-extended": "Resumen detallado con listado de puntos destacados y términos relevantes",
+	"kb.settings.learning-options.summary-simple": "Sumario estándar de un par de líneas.",
 	"kb.settings.models-section.advanced": "Avanzado",
 	"kb.settings.models-section.title": "Modelos e prompts",
 	"kb.settings.pdf_annotation_toggle.help": "Permita seleccionar visualmente algunas partes del diseño del documento y anotarlas.",
