--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -468,23 +468,23 @@
 	"kb.settings.confirm-anonymization.title": "Attention : les ressources futures seront affectées",
 	"kb.settings.generative_model.help": "Indiquez le modèle utilisé pour générer des réponses aux questions des utilisateurs.",
 	"kb.settings.generative_model.label": "Génération de réponses",
-	"kb.settings.generative_model.options.anthropic": "Anthropic Claude",
-	"kb.settings.generative_model.options.chatgpt": "OpenAI ChatGPT-3.5",
-	"kb.settings.generative_model.options.chatgpt-azure": "OpenAI + Azure ChatGPT-4",
-	"kb.settings.generative_model.options.chatgpt-azure-3": "OpenAI + Azure ChatGPT-3.5",
-	"kb.settings.generative_model.options.cohere": "Cohere Command (beta)",
-	"kb.settings.generative_model.options.disabled": "Désactivé",
-	"kb.settings.generative_model.options.enabled": "Activé",
-	"kb.settings.generative_model.options.gemini-pro": "Google Gemini Pro",
-	"kb.settings.generative_model.options.generative-multilingual-2023": "Mode sans génération",
-	"kb.settings.generative_model.options.multilingual-2023-08-16": "multilingual (alpha)",
-	"kb.settings.generative_model.options.nuclia-atlas-v1": "Nuclia Atlas",
-	"kb.settings.generative_model.options.nuclia-etna-v1": "Nuclia Etna",
-	"kb.settings.generative_model.options.nuclia-everest-v1": "Nuclia Everest",
-	"kb.settings.generative_model.options.palm": "Google PaLM 2 (beta)",
-	"kb.settings.generative_model.options.summary-extended": "Résumé détaillé mettant en avant les sujets marquants et les termes importants",
-	"kb.settings.generative_model.options.summary-simple": "Résumé standard de quelques lignes",
 	"kb.settings.generative_model.system_prompt_label": "Comportement",
+	"kb.settings.learning-options.anthropic": "Anthropic Claude",
+	"kb.settings.learning-options.chatgpt": "OpenAI ChatGPT-3.5",
+	"kb.settings.learning-options.chatgpt-azure": "OpenAI + Azure ChatGPT-4",
+	"kb.settings.learning-options.chatgpt-azure-3": "OpenAI + Azure ChatGPT-3.5",
+	"kb.settings.learning-options.cohere": "Cohere Command (beta)",
+	"kb.settings.learning-options.disabled": "Désactivé",
+	"kb.settings.learning-options.enabled": "Activé",
+	"kb.settings.learning-options.gemini-pro": "Google Gemini Pro",
+	"kb.settings.learning-options.generative-multilingual-2023": "Mode sans génération",
+	"kb.settings.learning-options.multilingual-2023-08-16": "multilingual (alpha)",
+	"kb.settings.learning-options.nuclia-atlas-v1": "Nuclia Atlas",
+	"kb.settings.learning-options.nuclia-etna-v1": "Nuclia Etna",
+	"kb.settings.learning-options.nuclia-everest-v1": "Nuclia Everest",
+	"kb.settings.learning-options.palm": "Google PaLM 2 (beta)",
+	"kb.settings.learning-options.summary-extended": "Résumé détaillé mettant en avant les sujets marquants et les termes importants",
+	"kb.settings.learning-options.summary-simple": "Résumé standard de quelques lignes",
 	"kb.settings.models-section.advanced": "Avancé",
 	"kb.settings.models-section.title": "Modèles et prompts",
 	"kb.settings.pdf_annotation_toggle.help": "Permet de sélectionner visuellement certaines parties de la mise en page du document et de les annoter.",
