Replace hideSources with hideResults

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -970,8 +970,8 @@
 	"widget.generator.advanced.generative-answer-category.answers.label": "Generació de respostes",
 	"widget.generator.advanced.generative-answer-category.citations.help": "Mostra quines fonts s'han utilitzat per generar la resposta.",
 	"widget.generator.advanced.generative-answer-category.citations.label": "Citacions",
-	"widget.generator.advanced.generative-answer-category.hide-sources.help": "Amaga les fonts utilitzades per generar la resposta",
-	"widget.generator.advanced.generative-answer-category.hide-sources.label": "Amaga les fonts",
+	"widget.generator.advanced.generative-answer-category.hide-results.help": "Amagar els resultats de la cerca",
+	"widget.generator.advanced.generative-answer-category.hide-results.label": "Amagar resultats",
 	"widget.generator.advanced.generative-answer-category.no-bm25-for-chat.help": "Els resultats de full text no s'utilitzaran per generar respostes",
 	"widget.generator.advanced.generative-answer-category.no-bm25-for-chat.label": "Només resultats semàntics",
 	"widget.generator.advanced.generative-answer-category.prompt.error": "Sembla que no utilitzeu cap variable en aquest indicador de l'usuari, pot produir respostes inconsistents. Comproveu els exemples d'indicacions de l'usuari a la pàgina de configuració.",
