--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -970,8 +970,8 @@
 	"widget.generator.advanced.generative-answer-category.answers.label": "Generación de respuesta",
 	"widget.generator.advanced.generative-answer-category.citations.help": "Muestre qué fuentes se han utilizado para generar la respuesta.",
 	"widget.generator.advanced.generative-answer-category.citations.label": "Citas",
-	"widget.generator.advanced.generative-answer-category.hide-sources.help": "Ocultar las fuentes utilizadas para generar la respuesta",
-	"widget.generator.advanced.generative-answer-category.hide-sources.label": "Ocultar fuentes",
+	"widget.generator.advanced.generative-answer-category.hide-results.help": "Ocultar los resultados de la búsqueda",
+	"widget.generator.advanced.generative-answer-category.hide-results.label": "Ocultar resultados",
 	"widget.generator.advanced.generative-answer-category.no-bm25-for-chat.help": "Los resultados de full text no se utilizarán para generar respuestas.",
 	"widget.generator.advanced.generative-answer-category.no-bm25-for-chat.label": "Sólo resultados semánticos",
 	"widget.generator.advanced.generative-answer-category.prompt.error": "Parece que no está utilizando ninguna variable en este mensaje de usuario, podría producir respuestas inconsistentes. Consulte los ejemplos de mensajes de usuario en la página de configuración.",
