--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -971,8 +971,8 @@
 	"widget.generator.advanced.generative-answer-category.answers.label": "Answer generation",
 	"widget.generator.advanced.generative-answer-category.citations.help": "Show which sources have been used to generate the answer.",
 	"widget.generator.advanced.generative-answer-category.citations.label": "Citations",
-	"widget.generator.advanced.generative-answer-category.hide-sources.help": "Hide sources used to generate the answer",
-	"widget.generator.advanced.generative-answer-category.hide-sources.label": "Hide sources",
+	"widget.generator.advanced.generative-answer-category.hide-results.help": "Hide the search results",
+	"widget.generator.advanced.generative-answer-category.hide-results.label": "Hide results",
 	"widget.generator.advanced.generative-answer-category.no-bm25-for-chat.help": "Full text results will not be used to generate answers",
 	"widget.generator.advanced.generative-answer-category.no-bm25-for-chat.label": "Only semantic results",
 	"widget.generator.advanced.generative-answer-category.prompt.error": "It seems you are not using any variable in this user prompt, it might produce inconsistent answers. Please check the user prompt examples in the settings page.",
