--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -971,8 +971,8 @@
 	"widget.generator.advanced.generative-answer-category.answers.label": "Génération de réponses",
 	"widget.generator.advanced.generative-answer-category.citations.help": "Montre quelles sources ont été utilisées pour générer la réponse.",
 	"widget.generator.advanced.generative-answer-category.citations.label": "Citations",
-	"widget.generator.advanced.generative-answer-category.hide-sources.help": "Masquer les sources utilisées pour générer la réponse",
-	"widget.generator.advanced.generative-answer-category.hide-sources.label": "Masquer les sources",
+	"widget.generator.advanced.generative-answer-category.hide-results.help": "Masquer les résultats de la recherche",
+	"widget.generator.advanced.generative-answer-category.hide-results.label": "Masquer les résultats",
 	"widget.generator.advanced.generative-answer-category.no-bm25-for-chat.help": "Les résultats full text ne seront pas utilisés pour générer les réponses",
 	"widget.generator.advanced.generative-answer-category.no-bm25-for-chat.label": "Uniquement les résultats sémantiques",
 	"widget.generator.advanced.generative-answer-category.prompt.error": "Il semble que vous n'utilisez aucune variable dans cette invite utilisateur, cela pourrait produire des réponses incohérentes. Veuillez vérifier les exemples d'invites utilisateur dans la page des paramètres.",
