Add SAML configuration form

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -76,6 +76,11 @@
 	"account.public": "Públic",
 	"account.related_kbs": "Knowledge Boxes del compte",
 	"account.replace_config": "Reemplaçar configuració",
+	"account.saml.domain": "Domini",
+	"account.saml.entity-id": "Id de l'entitat",
+	"account.saml.sso-url": "URL d'inici de sessió únic",
+	"account.saml.title": "Configuració d'inici de sessió únic",
+	"account.saml.x509-cert": "Certificat X.509",
 	"account.speech_to_text_description": "Nuclia ofereix models millorats de veu a text. L'ús d'aquests models requereix un càlcul més elevat i suposen un cost addicional. Marqueu la casella de selecció  si voleu utilitzar els models millorats.",
 	"account.threshold": "Llindar de consum",
 	"account.title": "Nom",
