--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -76,6 +76,11 @@
 	"account.public": "Public",
 	"account.related_kbs": "Account’s Knowledge Boxes",
 	"account.replace_config": "Replace settings",
+	"account.saml.domain": "Domain",
+	"account.saml.entity-id": "Entity id",
+	"account.saml.sso-url": "Single Sign-On URL",
+	"account.saml.title": "Single Sign-On configuration",
+	"account.saml.x509-cert": "X.509 certificate",
 	"account.speech_to_text": "Speech-to-text",
 	"account.speech_to_text_description": "Nuclia offers enhanced speech-to-text models. Using these models require more computation and an associated extra cost. Check the following checkbox if you want to use the enhanced models.",
 	"account.threshold": "Consumption threshold",
