--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -76,6 +76,11 @@
 	"account.public": "Público",
 	"account.related_kbs": "Knowledge Boxes de la cuenta",
 	"account.replace_config": "Reemplazar configuración",
+	"account.saml.domain": "Dominio",
+	"account.saml.entity-id": "Id de la entidad",
+	"account.saml.sso-url": "URL de inicio de sesión único",
+	"account.saml.title": "Configuración de inicio de sesión único",
+	"account.saml.x509-cert": "Certificado X.509",
 	"account.speech_to_text_description": "Nuclia ofrece modelos mejorados de voz a texto. El uso de estos modelos requiere un cómputo mayor y tienen un costo extra. Marque la siguiente casilla de verificación si desea utilizar los modelos mejorados.",
 	"account.threshold": "Umbral de consumo",
 	"account.title": "Nombre",
