--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -76,6 +76,11 @@
 	"account.public": "Public",
 	"account.related_kbs": "Knowledge Boxes du compte",
 	"account.replace_config": "Remplacer les paramètres",
+	"account.saml.domain": "Domaine ",
+	"account.saml.entity-id": "ID d'entité",
+	"account.saml.sso-url": "URL d'authentification unique",
+	"account.saml.title": "Configuration de l'authentification unique",
+	"account.saml.x509-cert": "Certificat X.509",
 	"account.speech_to_text": "De la parole au texte",
 	"account.speech_to_text_description": "Nuclia propose des modèles de synthèse vocale améliorés. L'utilisation de ces modèles nécessite plus de calculs et un coût supplémentaire associé. Cochez la case suivante si vous souhaitez utiliser les modèles améliorés.",
 	"account.threshold": "Seuil de consommation",
