--- a/libs/user/src/assets/i18n/en.json
+++ b/libs/user/src/assets/i18n/en.json
@@ -38,6 +38,7 @@
 	"login.title": "Welcome to Nuclia",
 	"login.token_expired": "Token has expired",
 	"login.try_again": "Please try again or reset your password below.",
+	"login.use-sso": "Use Single Sign-On",
 	"onboarding.failed": "Something went wrong, please contact your administrator.",
 	"onboarding.loading": "Loading…",
 	"onboarding.next-button": "Next",
