Support new processing-status endpoint

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -744,15 +744,18 @@
 	"resource.select-all-failures": "Seleccioneu tots els {{count}} recursos per error",
 	"resource.selected_count": "{{num}} arxius seleccionats",
 	"resource.shared_queue": "La cua de processament és compartida entre els comptes de prova.",
-	"resource.status": "Estat",
+	"resource.status.column-title": "Estat",
+	"resource.status.deleted": "S'ha suprimit",
+	"resource.status.error": "Error en processar",
+	"resource.status.loading": "S'està carregant l'estat...",
+	"resource.status.next": "A continuació es processarà",
+	"resource.status.pending": "Es processarà després de {{count}} recursos",
+	"resource.status.processed": "Processament completat",
+	"resource.status.processing": "Processament en curs",
+	"resource.status.rank": "Rang: {{rank}}",
+	"resource.status.starts-in": "Comença a: {{eta}}",
+	"resource.status.unknown": "Encara no hi ha cap estat disponible per a aquesta cua de processament del compte",
 	"resource.status-help.failed": "Els fitxers no es poden processar",
-	"resource.status_error": "Error en processar",
-	"resource.status_loading": "S'està carregant l'estat...",
-	"resource.status_next": "A continuació es processarà",
-	"resource.status_pending": "Es processarà després de {{count}} recursos",
-	"resource.status_processed": "Processament completat",
-	"resource.status_processing": "Processament en curs",
-	"resource.status_unknown": "Encara no hi ha cap estat disponible per a aquesta cua de processament del compte",
 	"resource.summary": "Resum",
 	"resource.text": "Text",
 	"resource.thumbnail.delete": "Suprimeix la miniatura",
