--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -745,15 +745,18 @@
 	"resource.select-all-failures": "Select all {{count}} resources in error",
 	"resource.selected_count": "{{num}} files selected",
 	"resource.shared_queue": "The processing queue is shared among trial accounts.",
-	"resource.status": "Status",
+	"resource.status.column-title": "Status",
+	"resource.status.deleted": "Deleted",
+	"resource.status.error": "Error while processing",
+	"resource.status.loading": "Loading status…",
+	"resource.status.next": "Will be processed next",
+	"resource.status.pending": "Will be processed after {{count}} resources",
+	"resource.status.processed": "Processing completed",
+	"resource.status.processing": "Processing in progress",
+	"resource.status.rank": "Rank: {{rank}}",
+	"resource.status.starts-in": "Starts in: {{eta}}",
+	"resource.status.unknown": "No status available for this account processing queue yet",
 	"resource.status-help.failed": "Files failing to be processed",
-	"resource.status_error": "Error while processing",
-	"resource.status_loading": "Loading status…",
-	"resource.status_next": "Will be processed next",
-	"resource.status_pending": "Will be processed after {{count}} resources",
-	"resource.status_processed": "Processing completed",
-	"resource.status_processing": "Processing in progress",
-	"resource.status_unknown": "No status available for this account processing queue yet",
 	"resource.summary": "Summary",
 	"resource.text": "Text",
 	"resource.thumbnail.delete": "Delete thumbnail",
