--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -744,15 +744,18 @@
 	"resource.select-all-failures": "Seleccionar todos los {{count}} recursos por error",
 	"resource.selected_count": "{{num}} ficheros seleccionados",
 	"resource.shared_queue": "La cola de procesamiento es compartida entre las cuentas de prueba.",
-	"resource.status": "Estado",
+	"resource.status.column-title": "Estado",
+	"resource.status.deleted": "Eliminado",
+	"resource.status.error": "Error al procesar",
+	"resource.status.loading": "Cargando estado…",
+	"resource.status.next": "Será procesado a continuación",
+	"resource.status.pending": "Se procesará después de {{count}} recursos",
+	"resource.status.processed": "Procesamiento completado",
+	"resource.status.processing": "Procesando en progreso",
+	"resource.status.rank": "Rango: {{rank}}",
+	"resource.status.starts-in": "Comienza en: {{eta}}",
+	"resource.status.unknown": "Aún no hay estado disponible para la cola de procesamiento de esta cuenta",
 	"resource.status-help.failed": "Archivos que no se pueden procesar",
-	"resource.status_error": "Error al procesar",
-	"resource.status_loading": "Cargando estado…",
-	"resource.status_next": "Será procesado a continuación",
-	"resource.status_pending": "Se procesará después de {{count}} recursos",
-	"resource.status_processed": "Procesamiento completado",
-	"resource.status_processing": "Procesando en progreso",
-	"resource.status_unknown": "Aún no hay estado disponible para la cola de procesamiento de esta cuenta",
 	"resource.summary": "Resumen",
 	"resource.text": "Texto",
 	"resource.thumbnail.delete": "Eliminar miniatura",
